--- a/aes.html
+++ b/aes.html
@@ -6,7 +6,8 @@
     <title>AES-256-CTR+HMAC 加解密工具（支持大文件）</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 必须先加载 hash-wasm UMD 版本 -->
-    <script src="https://registry.npmmirror.com/hash-wasm/4.9.0/files/dist/hmac-sha256.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hash-wasm@4/dist/hmac.umd.min.js"></script>
+
     <style>
         body {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
